     dialog (the effect is percieved as the new dialog not showing up).
   * Spacebar closes the dialogs without a scrollbar again.
   * Pressing escape in a new dialog, behaves like in the old dialogs again.
   * The new portrait dialogs can get higher so the scrollbars are less often
     visible.
   * Added a password box that hides its input
 * Multiplayer ui:
   * Added a gui front-end to various commands, brought up by double clicking
     a player name, replacing the old whisper dialog
   * Automatically select the game the selected player is in
   * Try to preserve the selected player when the player list is updated
   * Added an option to avoid auto-scroll to ennemy units during oponent's
   * Cleared the login dialog mess: Now there is a single dialog to display error
     messages from the server and to choose a different username and/or password
   * Added the possibility to provide a password in the main multiplayer dialog
   * Added an option to save the password to the preferences
     turn
 * WML engine:
   * add an "animate" key to the [teleport] event
   * add a resistance_anim block used whenever a unit uses a [resistance]
     ability on a neghbour
   * deprecated tag [debug_message]; use [wml_message] instead, which
     now offers the debug/dbg logger and uses the "wml" log domain
     (i.e. --log-*=wml should be used instead of --log-*=notifs).
   * The text output created by [wml_message] to stderr is echoed in-game
     using the chat user interface like [deprecated_message] and other
     Invalid-WML messages; the level of verbosity is controlled by the log
     level for the "wml" log domain.
   * the animate_unit action can now animate multiple units
   * the animate_unit action can now change the direction the unit is facing
     with a SLF
   * add a [replace_map] map="file" event that can load a map of a different
     size in a scenario
   * make [remove_shroud] and [place_shroud] use true Standard Location Filters,