@@ -39,6 +39,8 @@ Version 1.5.7+svn:
    * The new portrait dialogs can get higher so the scrollbars are less often
      visible.
    * Added a password box that hides its input
+   * The new portrait dialogs can now show the old images as well and also the
+     right hand side images.
  * Multiplayer ui:
    * Added a gui front-end to various commands, brought up by double clicking
      a player name, replacing the old whisper dialog
